Update spark-tuning-options.md